fix architecture test